--- a/Maxim/css/style.css
+++ b/Maxim/css/style.css
@@ -344,7 +344,7 @@ ul#menu-main > li > a:focus {
 	width: 100%;
 	min-height: 600px;
 	margin-top: -60px;
-	padding-top:160px;
+	padding-top:200px;
 	text-align:center;
 }
 
@@ -366,7 +366,7 @@ ul#menu-main > li > a:focus {
 
 header .logo {
 	text-align:center;
-	margin-bottom:30px;
+	padding-bottom:100px;
 }
 
 /* --- Header slider --- */
