Front listo -creo

--- a/Maxim/css/style.css
+++ b/Maxim/css/style.css
@@ -371,7 +371,7 @@ header .logo {
 
 /* --- Header slider --- */
 #header-wrapper.header-slider {
-	background: #444 url(../img/bg/bg-1.jpg) no-repeat center center fixed;
+	background: #444 url(../img/bg/bg-2.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -476,7 +476,7 @@ section.spacer {
 }
 
 .spacer.green,.section.green {
-	background:#1bac91;
+	background:#2f6299;
 }
 
 .spacer.green,.section.green h4 {
@@ -487,7 +487,7 @@ section.spacer {
 	background:#ffe873;
 }
 .spacer.orange,.section.orange {
-	background:#f36f36;
+	background:#7c64c6;
 }
 
 section.spacer.bg2 {
@@ -755,7 +755,7 @@ section#services .service-box h2 {
 }
 
 section#services.section.orange .service-box:hover {
-	background:#f36518;
+	background:#8d5fad;
 }
 
 
@@ -1690,7 +1690,7 @@ i.icon-white {
  display: block;
  text-align:center
 }
- .job-position: {
+ .job-position:{
  margin-bottom: 1.5em;
 }
  .navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
