--- a/Maxim/css/style.css
+++ b/Maxim/css/style.css
@@ -49,7 +49,7 @@ div, article, section, header, footer, nav, li {
 	position:relative;
 }
 
-#brandimage{
+#logoheader {
 	width: 30%;
 	height: 30%;
 }
@@ -283,12 +283,11 @@ h2.pagetitle {
 .navbar-fixed-top .container {
 /* Uncomment to make nav expand full width */
  /*	width: auto; */
- height: 0;
 }
 .navbar .brand {
 	margin-left:0;
 	padding: 0;
-	margin-bottom: 0;
+	margin-top: 1.05em;
 }
 .navbar .brand a {
 	padding: 0;
@@ -309,12 +308,10 @@ h2.pagetitle {
 }
 .navbar-inner {
 	min-height: 4.75em;
-	border-bottom-width: 0;
 }
 .navbar-inverse .navbar-inner {
 	background-repeat: repeat;
 	background-color: #0b333f;
-	border-bottom-width: 0;
 }
 .navbar-wrapper {
 	overflow:hidden;
@@ -1580,9 +1577,7 @@ i.icon-white {
 	
 	.navbar-inner {
 	 padding-right: 20px;
-	 padding-left: 20px;		 
-     border-bottom-width: 0px;
-
+	 padding-left: 20px;	
 	}
 	
 	.navbar-inner h1.brand {
@@ -1596,8 +1591,6 @@ i.icon-white {
 	.container {
 	 padding-right: 20px;
 	 padding-left: 20px;
- 	 height: 0;
-
 	}	
 	.navbar-inverse .navbar-inner {
 		padding:0 0 30px;
