--- a/Maxim/css/category.css
+++ b/Maxim/css/category.css
@@ -1,15 +1,20 @@
 .mdc-card{
     width: 365px;
-    height: 600px;
+    height: 365px;
 }
 
 .card_primary{
-    
-    height: 600px;
+    height: 365px;
     width: 365px
     
 }
 .card_secundary{
     height: 365px;
-    width: 600px
+    width: 365px
+}
+
+.center {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
 }
